site/docs/v0.3.0/en/components/task-pane.mdx
# Task Pane

A Task Pane hosts contextual properties, comments, navigation, and assistant workflows beside the active editor.

<Preview>
  <div
    class="relative flex h-80 w-full overflow-hidden border border-border bg-[var(--a3s-bg)]"
    data-task-pane-host
  >
    <div
      class="grid min-w-0 flex-1 place-items-center p-6 text-sm text-muted-foreground"
      data-editor-canvas
    >
      Editor canvas
    </div>
    <aside class="task-pane" data-responsive="overlay">
      <header>
        <h2>Page setup</h2>
        <button
          type="button"
          class="btn"
          data-size="icon-xs"
          data-variant="ghost"
          aria-label="Close page setup"
        >
          ×
        </button>
      </header>
      <section>
        <div class="field">
          <label for="task-pane-paper">Paper size</label>
          <select id="task-pane-paper">
            <option value="a4">A4</option>
            <option value="letter">Letter</option>
          </select>
          <p>210 × 297 mm</p>
        </div>
        <div class="field mt-4">
          <label for="task-pane-margin">Margin</label>
          <select id="task-pane-margin">
            <option value="normal">Normal</option>
            <option value="narrow">Narrow</option>
          </select>
        </div>
      </section>
      <footer>
        <button type="button" class="btn" data-size="sm" data-variant="outline">
          Reset
        </button>
        <button type="button" class="btn" data-size="sm">
          Apply
        </button>
      </footer>
    </aside>
  </div>
</Preview>

## Usage

```html
<div class="relative"><!-- establishes the overlay containing block -->
<aside class="task-pane" data-responsive="overlay">
  <header>
    <h2>Properties</h2>
    ...
  </header>
  <section>...</section>
  <footer>...</footer>
</aside>
</div>
```

### Parameters

| Parameter               | Required    | Purpose                             |
| ----------------------- | ----------- | ----------------------------------- |
| Semantic `header`       | Recommended | Title and close or overflow actions |
| Semantic `section`      | Yes         | Scrollable pane content             |
| Semantic `footer`       | Optional    | Persistent actions                  |
| `data-responsive="overlay"` | Optional | Shares workspace width above `56.25rem`, overlays below it, and fills the host below `32.5rem` |
| `--task-pane-width`     | Optional    | Pane width, default `clamp(20rem, 28vw, 23.75rem)` |
| `--task-pane-min-width` | Optional    | Minimum shared-layout width, default `18.75rem` |
| `--task-pane-overlay-width` | Optional | Overlay width, default `23.75rem` |
| `--task-pane-overlay-z-index` | Optional | Overlay stacking level, default `20` |

## States and variants

The host application owns whether the pane is mounted or placed in a Split Pane. Add `data-responsive="overlay"` when the Office behavior is desired: the pane shares workspace width above 900 pixels, overlays at the inline end below 900 pixels, and becomes workspace-wide below 520 pixels. Its host must establish a positioning context, normally with `position: relative`.

## Accessibility

Use `<aside>` when the pane is complementary to the editor and give its heading a stable accessible name. Return focus to the control that opened the pane when it closes.

## React

```tsx
export function TaskPaneExample() {
  return (
    <aside className="task-pane" data-responsive="overlay">
      <header>
        <h2>Properties</h2>
        <button type="button" aria-label="Close properties">
          Close
        </button>
      </header>
      <section>
        <dl>
          <div>
            <dt>Owner</dt>
            <dd>Release team</dd>
          </div>
        </dl>
      </section>
      <footer>
        <button type="button">Save properties</button>
      </footer>
    </aside>
  );
}
```

This published version predates framework adapters. The example renders the same semantic DOM and lets that version's browser runtime enhance its interactions.

## Vue

```vue
<template>
  <aside class="task-pane" data-responsive="overlay">
    <header>
      <h2>Properties</h2>
      <button type="button" aria-label="Close properties">Close</button>
    </header>
    <section>
      <dl>
        <div>
          <dt>Owner</dt>
          <dd>Release team</dd>
        </div>
      </dl>
    </section>
    <footer><button type="button">Save properties</button></footer>
  </aside>
</template>
```

This published version predates framework adapters. The example renders the same semantic DOM and lets that version's browser runtime enhance its interactions.
